2011-03-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (pstable): new arguments (lower.tail=TRUE, log.p=FALSE)
	not used "properly" yet
	(dPareto, pPareto): new auxiliary functions for tail behavior; not
	used yet - apart from tests:

	* tests/tails.R: new: testing tail behavior.

	* R/dpqr-stable.R (qstable): infinite while(.) now caught

2011-03-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (dstable, .fct1): detect when the integration
	seems completely unreliable and then also use the x=zeta value.
	This cures all remaining big problems I've found.

2011-03-10  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dpqr-stable.R (dstable, .fct1): use uniroot() to find theta2; then
	possibly split into four (instead just two) intervals for integration.

2011-03-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/dist-stableMode.R (stableMode): add 'tol' (and 'beta.max')
	arguments which were implicit before.

	* R/utils.R (.unirootNA): add 'tol' and 'maxiter' arguments.

	* R/dpqr-stable.R (pstable): get rid of "Sversion" and add 'tol,
	subdivisions' as arguments.
	Slightly *increase* default tol(erance) - so .integrate2() no
	longer warns, at least not for the examples.

2011-02-02  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Package): renamed to 'stabledist' as Jim Lindsey has
	maintained a non-CRAN package 'stable' forever (and it's used).
	* TODO: added
