@@ -1,0 +1,3 @@
+* Nolan ("tail.pdf") and other places mention *asymptotic* formulae
+  --> use these for large |x|, notably for  dstable(*, log = TRUE)
+
